alexandria-ui: added map title when moves hover a marker. Fix bug loading desktop element by using a stamp catalog link. Load vertical range navigator by default.

--- a/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-list.html
+++ b/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-list.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </div>
-        <div class$="layout horizontal flex embedded_[[embedded]] full-size_[[_toolbarHidden]]">
+        <div class$="list-body layout horizontal flex embedded_[[embedded]] full-size_[[_toolbarHidden]]">
             <cotton-list page-size="[[pageSize]]" count="[[countItemList]]" on-new-page="_loadPage" no-items-message="[[_emptyMessage]]" class$="flex [[_classes]]">
                 <iron-list id="items" items="[[_itemList]]" multi-selection selected-items="{{selectedItemList}}"
                            as="item" grid="[[grid]]" style$="width:calc([[width]]% - [[_offsetWidth]]px);margin:0 auto;"
