--- a/alexandria/ui-elements/src/widgets/alexandria-temporal-time-catalog.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-temporal-time-catalog.html
@@ -63,6 +63,9 @@
         :host .main.Vertical {
             position: relative;
         }
+        :host .main.Vertical alexandria-catalog-view-list ::content alexandria-catalog-list .list-body {
+            width: calc(100% - 100px) !important;
+        }
         :host .embedded_true .main {
             border-right-width: 0;
         }
@@ -77,9 +80,10 @@
             height: 100%;
         }
         :host .filtered_true .main alexandria-catalog-view-list.full {
-            height: calc(100% - 24px);
+            height: calc(100% - 30px);
         }
-        :host .filtered_true alexandria-catalog-view-list{
+        :host .filtered_true alexandria-catalog-view-list,
+        :host .filtered_true .main.Vertical alexandria-vertical-time-navigator {
             background: #ffffef;
         }
         :host .clear {
@@ -142,6 +146,10 @@
             padding-left: 30px;
             height: calc(100% - 57px);
         }
+        :host .filtered_true alexandria-vertical-time-navigator {
+            margin-top: 77px;
+            height: calc(100% - 77px);
+        }
         :host cotton-breadcrumbs {
             display: block;
             padding: 10px;
@@ -166,6 +174,11 @@
             }
             :host #main .main {
                 width: calc(100% - 40px);
+            }
+        }
+        @media screen and (max-width: 540px) {
+            :host .main.Vertical alexandria-catalog-view-list ::content alexandria-catalog-list .list-body {
+                width: calc(100% - 85px) !important;
             }
         }
     </style>
