--- a/alexandria/ui-elements/src/widgets/_common/alexandria-date-selector.html
+++ b/alexandria/ui-elements/src/widgets/_common/alexandria-date-selector.html
@@ -69,6 +69,7 @@
             margin: 0;
             padding: 0;
             min-height: 40px;
+            display: block !important;
         }
         :host a {
             cursor: pointer;
