alexandria-ui: added set view

--- a/alexandria/ui-elements/src/widgets/alexandria-panel.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-panel.html
@@ -134,7 +134,7 @@
         }
         :host #panel {
             display: block;
-            margin: 0px 6px;
+            margin: 0 6px;
             width: calc(100% - 12px);
             @apply(--alexandria-panel-panels);
         }
