--- a/alexandria/ui-elements/src/widgets/alexandria-view-container-set.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-view-container-set.html
@@ -12,35 +12,76 @@
 <dom-module id="alexandria-view-container-set">
 
     <template>
-        <paper-menu selected="{{_openedItem}}" attr-for-selected="name">
-            <template is="dom-repeat" items="[[_groupList]]" as="group">
-                <template is="dom-if" if="{{_singleGroup(group)}}">
-                    <template is="dom-repeat" items="{{group.list}}" as="item">
-                        <paper-item name$="[[item.label]]">[[item.label]]</paper-item>
+        <div class="layout horizontal">
+            <paper-menu selected="{{_openedItem}}" attr-for-selected="name">
+                <template is="dom-repeat" items="[[_groupList]]" as="group">
+                    <template is="dom-if" if="{{_singleGroup(group)}}">
+                        <template is="dom-repeat" items="{{group.list}}" as="item">
+                            <paper-item name$="[[item.label]]">[[item.label]]</paper-item>
+                        </template>
+                    </template>
+                    <template is="dom-if" if="{{!_singleGroup(group)}}">
+                        <paper-submenu opened$="[[group.opened]]">
+                            <paper-item class="menu-trigger">[[group.label]]</paper-item>
+                            <paper-menu class="menu-content" selected="{{_openedItem}}" attr-for-selected="name">
+                                <template is="dom-repeat" items="{{group.list}}" as="item">
+                                    <paper-item name$="[[item.label]]">[[item.label]]</paper-item>
+                                </template>
+                            </paper-menu>
+                        </paper-submenu>
                     </template>
                 </template>
-                <template is="dom-if" if="{{!_singleGroup(group)}}">
-                    <paper-submenu opened$="[[group.opened]]">
-                        <paper-item class="menu-trigger">[[group.label]]</paper-item>
-                        <paper-menu class="menu-content" selected="{{_openedItem}}" attr-for-selected="name">
-                            <template is="dom-repeat" items="{{group.list}}" as="item">
-                                <paper-item name$="[[item.label]]">[[item.label]]</paper-item>
-                            </template>
-                        </paper-menu>
-                    </paper-submenu>
+            </paper-menu>
+            <iron-pages id="pages" class="flex" attr-for-selected="name" selected="{{_openedItem}}">
+                <template is="dom-repeat" items="[[_itemList]]" as="item">
+                    <div class="item" name$="[[item.label]]">
+                        <cotton-zombie display$="[[item.type]]" widget$="[[item.type]]" object$="[[display.id]][[item.label]]"></cotton-zombie>
+                    </div>
                 </template>
-            </template>
-        </paper-menu>
-        <iron-pages id="pages" class="flex" attr-for-selected="name">
-            <template is="dom-repeat" items="[[_itemList]]" as="item">
-                <div class="item" name$="[[item.label]]">
-                    <cotton-zombie display$="[[item.type]]" widget$="[[item.type]]" object$="[[display.id]][[item.label]]"></cotton-zombie>
-                </div>
-            </template>
-        </iron-pages>
+            </iron-pages>
+        </div>
     </template>
 
     <style>
+        :host {
+            display: block;
+            height: 100%;
+        }
+        :host > div {
+            height: 100%;
+        }
+        :host paper-menu {
+            width: 250px;
+            background: #f7f7f7;
+            --paper-menu-selected-item : {
+                background: #e0e0e0;
+                font-weight: normal;
+                -webkit-border-radius: 4px;
+                -moz-border-radius: 4px;
+                border-radius: 4px;
+            }
+        }
+        :host paper-submenu paper-menu {
+            margin-left: 20px;
+            width: calc(100% - 20px);
+        }
+        :host paper-item {
+            font-size: 11pt;
+            min-height: 30px;
+            margin: 0 10px;
+            cursor: pointer;
+        }
+        :host .item {
+            height: calc(100% - 1px);
+        }
+        :host #pages {
+            width: 100%;
+        }
+        @media screen and (max-width: 736px) {
+            :host paper-menu {
+                display: none;
+            }
+        }
     </style>
 
     <script>
@@ -65,6 +106,7 @@
             properties : {
                 _openedItem : { type: String, observer: '_openItem' },
                 _itemList : Array,
+                _groupList : Array,
                 _defaultItemReceived: { type: Boolean, value: function() { return false; } }
             },
 
@@ -77,6 +119,7 @@
                 const countItems = itemList.length;
                 itemList.forEach((item) => item.type = this._itemProperty(item, "type").value);
                 this._itemList = itemList;
+                this._groupList = this._loadGroups();
             },
 
             _refreshOpened : function(opened) {
@@ -112,7 +155,41 @@
                         index = i;
                 }
                 return index;
+            },
+
+            _loadGroups : function() {
+                if (this._itemList == null) return;
+
+                var groups = [];
+                var registeredGroups = [];
+                for (var i=0; i<this._itemList.length; i++) {
+                    var itemGroup = this._itemProperty(this._itemList[i], "group").value;
+                    if (itemGroup == null) groups.push({ list: [ this._itemList[i] ] });
+                    else {
+                        if (registeredGroups[itemGroup] == null) {
+                            registeredGroups[itemGroup] = { list: [], label: itemGroup, opened: this._itemProperty(this._itemList[i], "group_opened").value };
+                            groups.push(registeredGroups[itemGroup]);
+                        }
+                        registeredGroups[itemGroup].list.push(this._itemList[i]);
+                    }
+                }
+
+                return groups;
+            },
+
+            _singleGroup : function(group) {
+                return group.list.length == 1;
+            },
+
+            _itemProperty : function(item, property) {
+                let properties = item.referencePropertyList;
+                for (var i=0; i<properties.length; i++) {
+                    if (properties[i].name == property)
+                        return properties[i];
+                }
+                return null;
             }
+
         });
     </script>
     
