alexandria-ui: Added DialogResult and notify user to Dialogs

--- a/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-grouping.html
+++ b/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-grouping.html
@@ -192,6 +192,7 @@
 
             _refreshInternalGrouping : function() {
                 this.notifyPath("_grouping", { name: this.grouping.name,
+                    countItems: this.grouping.countItems,
                     label: this.grouping.label,
                     isPercentage: this._isPercentage(),
                     groupList: [] });
