alexandria-ui: added resize event for display stamps

--- a/alexandria/ui-elements/src/widgets/alexandria-catalog.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-catalog.html
@@ -36,6 +36,7 @@
         </div>
         <div id="panel" name="panel" class="layout vertical flex hidden" style="height:calc(100% - 60px);"></div>
         <cotton-zombie display="AlexandriaDialogBox" widget="AlexandriaDialogBox"></cotton-zombie>
+        <paper-toast class="layout horizontal center" id="itemsArrival" duration="0"><span>[[ItemsArrival]]</span><paper-button on-tap="_refreshWithArrival">[[RefreshItems]]</paper-button><paper-button on-tap="_closeItemsArrival">[[Close]]</paper-button></paper-toast>
         <paper-toast id="notifyMessageToast" class="fit-bottom message" text="[[_notifyMessage]]"></paper-toast>
         <paper-dialog id="groupingsDialog" no-overlap>
             <h2>[[ShowGroupings]]</h2>
@@ -150,6 +151,17 @@
             --cotton-breadcrumbs-item-brothers-size: 10pt;
             --cotton-breadcrumbs-item-parents-size: 10pt;
         }
+        :host #itemsArrival {
+            position: absolute;
+            width: 100%;
+            background: #333;
+            color: white;
+            padding: 5px 10px;
+            font-size: 10pt;
+        }
+        :host #itemsArrival span {
+            margin-right: 10px;
+        }
         @media screen and (max-width: 736px) {
             :host #showGroupingsButton {
                 display: flex;
@@ -179,13 +191,17 @@
                 ClearFilter : "ver todos",
                 ShowGroupings : "filtrar catálogo",
                 Close : "cerrar",
-                Back : "< volver al catálogo"
+                Back : "< volver al catálogo",
+                ItemsArrival : "han llegado nuevos elementos",
+                RefreshItems : "actualizar"
             },
             en: {
                 ClearFilter : "view all",
                 ShowGroupings : "filter catalog",
                 Close : "close",
-                Back : "< back to catalog"
+                Back : "< back to catalog",
+                ItemsArrival : "new items arrival",
+                RefreshItems : "refresh"
             }
         };
 
@@ -217,6 +233,19 @@
                 this._catalog = catalog;
                 this._hideGroupings = this._catalog.hideGroupings;
                 this._showLabel = catalog.embedded && catalog.label !== "";
+            },
+
+            _itemsArrival : function() {
+                this.querySelector("paper-toast#itemsArrival").open();
+            },
+
+            _closeItemsArrival : function() {
+                this.querySelector("paper-toast#itemsArrival").close();
+            },
+
+            _refreshWithArrival : function() {
+                this.refreshItems();
+                this._closeItemsArrival();
             },
 
             _refreshFiltered : function(value) {
